--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -22,6 +22,11 @@
     font-size: 20px;
     border: none;
 }
+/* header */
+.header{
+    background-image: url(../images/developer.png);
+    
+}
 
 /* Nav Styles */
 nav{
@@ -47,4 +52,28 @@ nav ul li{
 nav li a{
     text-decoration: none;
     font-size: 20px;
+}
+/* banner styles */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 230px;
+}
+.banner-content{
+max-width:580px;
+}
+.banner-greetings{
+    font-size: 45px;
+    font-weight: 600;
+    
+}
+.banner-title{
+   font-size: 85px;
+   font-weight: 800;     
+}
+.banner-description{
+    font-size: 18px;
+}
+.banner-profile-pic{
+    width: 580px;
 }
