--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -24,8 +24,9 @@
 }
 /* header */
 .header{
-    background-image: url(../images/developer.png);
-    
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
 
 /* Nav Styles */
